infra/04-applications/05-services/keycloak/without-operator/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
