infra/04-applications/05-services/keycloak/without-operator/05-ingress.yaml
---
# Ingress pour l'accès public
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: banana
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    # Bloquer l'accès à l'admin console via l'ingress public
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ ^/admin {
        return 404;
      }
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - oidc.bananaam.fr
      secretName: keycloak-tls
  rules:
    - host: oidc.bananaam.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
